# simple-django-react-books

./: README.md
backend/: db.sqlite3  pyproject.toml  requirements.txt
backend/app/: asgi.py  settings.py  urls.py  wsgi.py
backend/authors/: models.py  serializers.py  views.py
backend/authors/migrations/: 0001_initial.py
backend/books/: models.py  serializers.py  views.py
backend/books/migrations/: 0001_initial.py  0002_auto_20200828_0351.py  0003_auto_20200828_0352.py  0004_auto_20200828_0425.py
backend/booksAPI/: settings.py  urls.py  views.py
frontend/: package.json
frontend/src/: App.js  global.css  routes.js  utils.js
frontend/src/Components/: Header.js  ModalConfirm.js
frontend/src/Components/Header/: index.jsx
frontend/src/Components/NewAuthorModal/: index.jsx
frontend/src/Components/NewBookModal/: index.jsx
frontend/src/Components/NewCategoryModal/: index.jsx
frontend/src/Contexts/: Context.jsx
frontend/src/pages/Authors/: index.js  index.jsx
frontend/src/pages/Books/: index.js  index.jsx
frontend/src/pages/Categories/: index.js  index.jsx
frontend/src/pages/NewBooks/: index.js
frontend/src/services/: api.js
